--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>New Age - Start Bootstrap Theme</title>
+  <title>The GeoFarmer App</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -21,10 +21,30 @@
   <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
 
   <!-- Plugin CSS -->
-  <link rel="stylesheet" href="device-mockups/device-mockups.min.css">
+  <link rel="stylesheet" href="device-mockups/device-mockups.css">
 
   <!-- Custom styles for this template -->
-  <link href="css/new-age.min.css" rel="stylesheet">
+  <link href="css/new-age.css" rel="stylesheet">
+
+  <!-- Fav-icon -->
+
+  <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/manifest.json">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+  <meta name="theme-color" content="#ffffff">
 
 </head>
 
@@ -33,7 +53,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">Start Bootstrap</a>
+      <a class="navbar-brand js-scroll-trigger" href="https://geofarmer.org" target="_blank">Start GeoFarmer</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
@@ -41,10 +61,16 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#download">Download</a>
+            <a class="nav-link js-scroll-trigger" href="#learn">Learn</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#features">Features</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#pro">Pro</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#references">Readings</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
@@ -59,13 +85,13 @@
       <div class="row h-100">
         <div class="col-lg-7 my-auto">
           <div class="header-content mx-auto">
-            <h1 class="mb-5">New Age is an app landing page that will help you beautifully showcase your new mobile app, or anything else!</h1>
-            <a href="#download" class="btn btn-outline btn-xl js-scroll-trigger">Start Now for Free!</a>
+            <h1 class="mb-5">For agricultural development projects, GeoFarmer can facilitate two-way interaction and better follow-up with the farming community!</h1>
+            <a href="https://www.youtube.com/watch?v=0m01T3CNBEk&feature=youtu.be" target="_blank" class="btn btn-outline btn-xl js-scroll-trigger">Watch the Instruction Video Now!</a>
           </div>
         </div>
         <div class="col-lg-5 my-auto">
           <div class="device-container">
-            <div class="device-mockup iphone6_plus portrait white">
+            <div class="device-mockup iphone6_plus portrait black">
               <div class="device">
                 <div class="screen">
                   <!-- Demo image for screen mockup, you can put an image here, some HTML, an animation, video, or anything else! -->
@@ -82,15 +108,15 @@
     </div>
   </header>
 
-  <section class="download bg-primary text-center" id="download">
+  <section class="download bg-primary2 text-center" id="learn">
     <div class="container">
       <div class="row">
         <div class="col-md-8 mx-auto">
-          <h2 class="section-heading">Discover what all the buzz is about!</h2>
-          <p>Our app is available on any mobile device! Download now to get started!</p>
+          <h2 class="section-heading">Learn how to use the GeoFarmer App for your projects!</h2>
+          <p>Our online course is available for free! Get started!</p>
           <div class="badges">
-            <a class="badge-link" href="#"><img src="img/google-play-badge.svg" alt=""></a>
-            <a class="badge-link" href="#"><img src="img/app-store-badge.svg" alt=""></a>
+            <a class="badge-link" href="http://learn.ciat.cgiar.org/" target="_blank"><img src="img/Moodle-Logo.wine.svg" width="600" alt=""></a>
+          <!--  <a class="badge-link" href="#"><img src="img/app-store-badge.svg" alt=""></a> -->
           </div>
         </div>
       </div>
@@ -100,8 +126,8 @@
   <section class="features" id="features">
     <div class="container">
       <div class="section-heading text-center">
-        <h2>Unlimited Features, Unlimited Fun</h2>
-        <p class="text-muted">Check out what you can do with this app theme!</p>
+        <h2>Using Progressive Web Application (PWA) technology, Geofarmer is platform-independent</h2>
+        <p class="text-muted">Check out what you can do with the GeoFarmer App!</p>
         <hr>
       </div>
       <div class="row">
@@ -111,7 +137,7 @@
               <div class="device">
                 <div class="screen">
                   <!-- Demo image for screen mockup, you can put an image here, some HTML, an animation, video, or anything else! -->
-                  <img src="img/demo-screen-1.jpg" class="img-fluid" alt="">
+                  <img src="img/demo-screen-2.jpg" class="img-fluid" alt="">
                 </div>
                 <div class="button">
                   <!-- You can hook the "home button" to some JavaScript events or just remove it -->
@@ -125,32 +151,32 @@
             <div class="row">
               <div class="col-lg-6">
                 <div class="feature-item">
-                  <i class="icon-screen-smartphone text-primary"></i>
-                  <h3>Device Mockups</h3>
-                  <p class="text-muted">Ready to use HTML/CSS device mockups, no Photoshop required!</p>
+                  <i class="icon-layers text-primary"></i>
+                  <h3>Channels</h3>
+                  <p class="text-muted">GeoFarmer uses channels to provide a project-like structure!</p>
                 </div>
               </div>
               <div class="col-lg-6">
                 <div class="feature-item">
-                  <i class="icon-camera text-primary"></i>
-                  <h3>Flexible Use</h3>
-                  <p class="text-muted">Put an image, video, animation, or anything else in the screen!</p>
+                  <i class="icon-user text-primary"></i>
+                  <h3>User Roles</h3>
+                  <p class="text-muted">In a Geo-Farmer channel, a user can have four distinct roles: a moderator, a facilitator, a geo-data manager, or a user!</p>
                 </div>
               </div>
             </div>
             <div class="row">
               <div class="col-lg-6">
                 <div class="feature-item">
-                  <i class="icon-present text-primary"></i>
-                  <h3>Free to Use</h3>
-                  <p class="text-muted">As always, this theme is free to download and use for any purpose!</p>
+                  <i class="icon-game-controller text-primary"></i>
+                  <h3>Functions</h3>
+                  <p class="text-muted">Collect data and run surveys, ask questions and share knowledge!</p>
                 </div>
               </div>
               <div class="col-lg-6">
                 <div class="feature-item">
-                  <i class="icon-lock-open text-primary"></i>
-                  <h3>Open Source</h3>
-                  <p class="text-muted">Since this theme is MIT licensed, you can use it commercially!</p>
+                  <i class="icon-grid text-primary"></i>
+                  <h3>Modules</h3>
+                  <p class="text-muted">GeoFarmer is modular in structure, with specific modules available to channels!</p>
                 </div>
               </div>
             </div>
@@ -160,57 +186,102 @@
     </div>
   </section>
 
-  <section class="cta">
+  <section class="cta" id="pro">
     <div class="cta-content">
       <div class="container">
-        <h2>Stop waiting.<br>Start building.</h2>
-        <a href="#contact" class="btn btn-outline btn-xl js-scroll-trigger">Let's Get Started!</a>
+        <h2>You want to start your own GeoFarmer project channel?</h2>
+        <a href="#contact" class="btn btn-outline btn-xl js-scroll-trigger">Get in contact with us!</a>
       </div>
     </div>
     <div class="overlay"></div>
   </section>
 
-  <section class="contact bg-primary" id="contact">
-    <div class="container">
-      <h2>We
-        <i class="fas fa-heart"></i>
-        new friends!</h2>
-      <ul class="list-inline list-social">
-        <li class="list-inline-item social-twitter">
-          <a href="#">
-            <i class="fab fa-twitter"></i>
-          </a>
-        </li>
-        <li class="list-inline-item social-facebook">
-          <a href="#">
-            <i class="fab fa-facebook-f"></i>
-          </a>
-        </li>
-        <li class="list-inline-item social-google-plus">
-          <a href="#">
-            <i class="fab fa-google-plus-g"></i>
-          </a>
-        </li>
-      </ul>
-    </div>
-  </section>
+  <!-- Call to Action Section -->
+    <section class="page-section bg-light text-dark" id="references">
+      <div class="container text-center">
+        <h2 class="mb-4">Read more about the GeoFarmer App</h2>
+        <table class="table table-striped table-light table-hover">
+          <tbody data-link="row" class="rowlink">
+            <tr><td>GeoFarmer App: A tool to complement extension services and foster active farmers participation and knowledge exchange</td><td>Info note - CGSpace</td><td class="rowlink-skip"><a href="https://cgspace.cgiar.org/handle/10568/107365" target="_blank">Download</a></td></tr>
+            <tr><td>GeoFarmer: A monitoring and feedback system for agricultural development projects</td><td>Scientific paper - Computers and Electronics in Agriculture</td><td class="rowlink-skip"><a href="https://doi.org/10.1016/j.compag.2019.01.049" target="_blank">Download</a></td></tr>
+            <tr><td>Monitor climate-smart agricultural interventions with a real-time participatory tool</td><td>Project Report - CGSpace</td><td class="rowlink-skip"><a href="https://cgspace.cgiar.org/handle/10568/89096" target="_blank">Download</a></td></tr>
+            <tr><td>A Multi-National Human–Computer Interaction Evaluation of the Public Participatory GIS GeoCitizen</td><td>Scientific paper - GI_Forum 2019</td><td class="rowlink-skip"><a href="http://austriaca.at/8609-0inhalt/A03_1123_FP_Bartling.pdf" target="_blank">Download</a></td></tr>
+            <tr><td>Status of CSA adoption and related impact on farming communities across 8 CSV implementing the CSV monitoring plan in 2018</td><td>Status Report - CGSpace</td><td class="rowlink-skip"><a href="https://cgspace.cgiar.org/handle/10568/100540" target="_blank">Download</a></td></tr>
+            <tr><td>The GeoCitizen-approach: community-based spatial planning – an Ecuadorian case study</td><td>Scientific paper - Cartography and Geographic Information Science</td><td class="rowlink-skip"><a href="https://doi.org/10.1080/15230406.2014.890546" target="_blank">Download</a></td></tr>
+            <tr><td>Using Science Knowledge and Expert Feedback to Accelerate Local Adoption: Climate Smart Technologies and Practices Meet ICT Tools</td><td>Project Report - Researchgate</td><td class="rowlink-skip"><a href="https://www.researchgate.net/publication/277709681_Using_Science_Knowledge_and_Expert_Feedback_to_Accelerate_Local_Adoption_Climate_Smart_Technologies_and_Practices_Meet_ICT_Tools?channel=doi&linkId=55707b4408aeffcab353ca5f&showFulltext=true" target="_blank">Download</a></td></tr>
+          </tbody>
+        </table>
 
-  <footer>
-    <div class="container">
-      <p>&copy; Your Website 2019. All Rights Reserved.</p>
-      <ul class="list-inline">
-        <li class="list-inline-item">
-          <a href="#">Privacy</a>
-        </li>
-        <li class="list-inline-item">
-          <a href="#">Terms</a>
-        </li>
-        <li class="list-inline-item">
-          <a href="#">FAQ</a>
-        </li>
-      </ul>
+      </div>
+    </section>
+
+  <!-- GeoCitizen developer community Section -->
+
+
+<section class="features" id="features">
+    <div class="section-heading text-center">
+      <h2>GeoFarmer is based on the GeoCitizen framework</h2>
+      <h1><a href="https://geocitizen.org" target="_blank"><img src="img/geocitizen_logo.png"></a></h1>
     </div>
-  </footer>
+      <div class="feature-item text-center">
+          <i2 class="icon-social-github text-center"></i2>
+          <h3>Developer community</h3>
+          <p class="text-muted"><a href="https://github.com/geocitizens" target="_blank">geocitizens</a></p>
+      </div>
+</section>
+
+  <!-- Contact Section -->
+
+<section class="page-section bg-primary text-white"  id="contact">
+
+<div class="container">
+  <div class="row">
+    <div class="col-sm">
+      <div class="container">
+          <a href="https://ciat.cgiar.org" target="_blank">
+          <img src="img/logociatblanco.png" alt="CIAT"></a>
+      </div>
+    </div>
+    <div class="col-sm">
+      <div class="col-lg-18 text-center">
+        <p class="text-white-50 text-muted mb-5"><br>CIAT is a CGIAR Research Center <br> Km 17 Recta Cali-Palmira CP 763537 <br>
+      Apartado Aéreo 6713, Cali, Colombia</p>
+      </div>
+    </div>
+    <div class="col-sm">
+      <div class="container">
+          <img src="img/cgiar-logo200-white.png" height="129" alt="CGIAR">
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+  <div class="container bg-primary">
+    <div class="row justify-content-center">
+      <div class="col-lg-8 text-center">
+        <h2 class="mt-0">Let's Get In Touch!</h2>
+        <hr class="divider my-4">
+        <p class="text-white-50 text-muted mb-5">Ready to use the GeoFarmer App in your project? <br>Send us an email and we will get back to you as soon as possible!</p>
+
+        <span style="font-size: 48px">
+        <a href="mailto:a.eitzinger@cgiar.org">
+        <envelope class="fas fa-envelope"></envelope></a>
+      </span>
+        </div>
+    </div>
+
+  </div>
+</section>
+
+<!-- Footer -->
+<footer class="bg-light py-5 bg-dark">
+  <div class="container">
+    <div class="small text-center text-muted">Copyright &copy; 2019 International Center for Tropical Agriculture - CIAT</div>
+  </div>
+</footer>
+
 
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
