updated terms and conditions

--- a/index.html
+++ b/index.html
@@ -75,6 +75,8 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
           </li>
+
+      
         </ul>
       </div>
     </div>
@@ -278,6 +280,13 @@
 <!-- Footer -->
 <footer class="bg-light py-5 bg-dark">
   <div class="container">
+
+
+      <a class="nav-link js-scroll-trigger" href="./legal.html">Terms and Conditions</a>
+
+
+
+
     <div class="small text-center text-muted">Copyright &copy; 2019 International Center for Tropical Agriculture - CIAT</div>
   </div>
 </footer>
