--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
             <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
           </li>
 
+
       
         </ul>
       </div>
@@ -283,6 +284,7 @@
 
 
       <a class="nav-link js-scroll-trigger" href="./legal.html">Terms and Conditions</a>
+      <a class="nav-link js-scroll-trigger" href="./privacy.html">Privacy and data protection</a>
 
 
 
